# alone

./: .gitignore  Cargo.toml  Dockerfile  README.md  example-test.rs
examples/: example-test.py
models/train/: train.py
src/: appctl.rs  classy.rs  config.rs  conv.rs  enti.rs  main.rs  ready.rs  senti.rs  status.rs  sumi.rs  telegram.rs  wordimage.rs
train/: convert.py  train.py
