[package]
name = "alone"
version = "0.1.0"
authors = ["QuantumEntangledAndy <sheepchaan@gmail.com>"]
edition = "2018"
default-run = "alone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
tokio = "*"
telegram-bot = "*"
bus = "*"
rand = "*"
ctrlc = "*"
log =  "*"
err-derive = "*"
pretty_env_logger = "*"
# rust-bert = { git = "https://github.com/guillaume-be/rust-bert", branch = "fix_greedy_generation" }
rust-bert = { path = "/Users/awk21/Projects/Software/rust-bert", version="*" }
tch = "*"
toml = "*"
uuid = { version = "*", features = ["v4"] }
crossbeam = "*"
serde = { version = "*", features = ["derive"] }
crossbeam-channel = "*"
validator = "*"
validator_derive = "*"
scopeguard = "*"

[dev-dependencies]
anyhow = "*"

[[bin]]
name = "alone"
path = "src/main.rs"

[[example]]
name = "testconvmodel"
path = "example-test.rs"
