[package]
name = "alone"
version = "0.1.0"
authors = ["QuantumEntangledAndy <sheepchaan@gmail.com>"]
edition = "2018"
default-run = "alone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3.5"
clap = { git = "https://github.com/clap-rs/clap" }
Inflector = "^0.11.4"
regex = "^1.4.1"
tokio = { version = "^0.2" }
telegram-bot = "^0.7.0"
bus = "^2.2.3"
rand = "^0.6.5"
ctrlc = "^3.1.6"
log =  "^0.3.9"
err-derive = "^0.2.4"
pretty_env_logger = "^0.4.0"
# rust-bert = { git = "https://github.com/guillaume-be/rust-bert", branch = "fix_greedy_generation" }
rust-bert = { path = "/Users/awk21/Projects/Software/rust-bert", version="*" }
tch = "^0.2.1"
toml = "^0.5.7"
uuid = { version = "^0.8.1", features = ["v4"] }
crossbeam = "^0.7.3"
serde = { version = "^1.0.117", features = ["derive"] }
crossbeam-channel = "^0.4.4"
validator = "^0.11.0"
validator_derive = "^0.11.0"
scopeguard = "^1.1.0"

[dev-dependencies]
anyhow = "^1.0.33"

[[bin]]
name = "alone"
path = "src/main.rs"

[[example]]
name = "testconvmodel"
path = "example-test.rs"
